[package]
name = "buter"
version = "1.1.0"
edition = "2021"

authors = ["uselessgoddess <dodickgod@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/uselessgoddess/buter"
homepage = "https://github.com/uselessgoddess/buter"
description = """
Fluid buffer as place for iterators
"""
categories = ["algorithms"]
keywords = ["buffer", "iterator"]

[dependencies]
lock_api = "0.4.7"
leak_slice = "0.2.0"
parking_lot = "0.12.1"
crossbeam-queue = "0.3.5"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "collect"
harness = false