[package]
name = "buter"
version = "1.2.3"
edition = "2021"

authors = ["uselessgoddess <dodickgod@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/uselessgoddess/buter"
homepage = "https://github.com/uselessgoddess/buter"
description = """
Fluid buffer as place for iterators
"""
categories = ["algorithms"]
keywords = ["buffer", "iterator"]

[dependencies]
parking_lot = "0.12.1"
crossbeam-queue = "0.3.5"

[dev-dependencies]
criterion = "0.3.5"
crossbeam = "0.8.2"
trybuild = "1.0.63"

[[bench]]
name = "collect"
harness = false
